[tool.poetry]
name = "wifi-business-cards"
version = "0.1.0"
description = "Create Avery 5371 business cards from wifi creds"
authors = ["Tim McFadden <tim@timandjamie.com>"]

[tool.poetry.dependencies]
python = "^3.7"
reportlab = "^3.5.42"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipdb = "^0.13.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
