[tool.poetry]
name = "wifi-business-cards"
version = "0.1.0"
description = "Create Avery 5371 business cards from wifi creds"
authors = ["Tim McFadden <tim@timandjamie.com>"]

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^3.6.12"
qrcode = "^7.3.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipdb = "^0.13.9"
flake8 = "^5.0.4"
mypy = "^0.991"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
